# pipeline

./: pyproject.toml
experiments/: main2.py  main3.py
pipeline/: main.py
pipeline/base_processing/: get_tickers.py
pipeline/market_data/: IDataSource.py  kraken.py
pipeline/portfolio/: csv.py
pipeline/reporting/: create_report.py
pipeline2/: graph.py  node.py  pipelinerunner.py
pipeline2/market_data/: yahoo.py
pipeline2/portfolio/: process.py
pipeline2/processing/: cost_basis.py
pipeline2/reporting/: format_report.py
