[tool.poetry]
name = "pipeline"
version = "0.1.0"
description = "A data processing framework using composable nodes."
authors = ["Albert Latham <me@albertlatham.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
multimethod = "^1.11.2"
pygraphviz = "^1.12"
pandas = "^2.2.1"
yfinance = "^0.2.37"
dependency-injector = "^4.41.0"
click = "^8.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
